--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 .wrapper {
   height:100%;
   width:100%;
-}</style><link rel="shortcut icon" href="//twilio.com/bundles/marketing/img/favicons/favicon.ico"><link rel="apple-touch-icon" href="//twilio.com/bundles/marketing/img/favicons/favicon_57.png"><link rel="apple-touch-icon" sizes="72x72" href="//twilio.com/bundles/marketing/img/favicons/favicon_72.png"><link rel="apple-touch-icon" sizes="114x114" href="//twilio.com/bundles/marketing/img/favicons/favicon_114.png"><link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"><link rel="stylesheet" href="viewsaurus.css"></head><body><div class="wrapper"><div id="viewsaurus" data-title="Instant Lead Alerts"><div class="saurus-panes"><div class="saurus-prose"><div class="saurus-prose-header"><div class="title-outer"><span class="step-title">Instant Lead Alerts</span></div></div><div class="saurus-nav-buttons"><div class="saurus-nav-button nav-overview"><div class="saurus-nav-button-inner"><i class="fa fa-fw fa-list"></i></div><div class="nav-divider"></div></div><div class="saurus-nav-button nav-previous"><div class="saurus-nav-button-inner"><a href=""> <i class="fa fa-fw fa-play fa-rotate-180"></i></a></div><div class="nav-divider"></div></div><div class="saurus-nav-button nav-next clickable"><div class="saurus-nav-button-inner"><a href="#1"> <i class="fa fa-fw fa-play"></i></a></div></div><div class="saurus-next-title"><span class="next-title-inner"></span></div></div><div class="saurus-progress-bar"></div><div class="saurus-start"><p>In this tutorial, we will learn how to instantly route leads to sales reps (in a real estate scenario) using text messages. Let's get started!</p><a href="#0">Start Tutorial</a></div><div class="saurus-content"><div data-title="Setting Up The Application" class="chapter"><div data-title="What Are We Building?" data-file="src/main/webapp/home.jsp" class="step"><h2 id="what-are-we-building-">What Are We Building?</h2>
+}</style><link rel="shortcut icon" href="//twilio.com/bundles/marketing/img/favicons/favicon.ico"><link rel="apple-touch-icon" href="//twilio.com/bundles/marketing/img/favicons/favicon_57.png"><link rel="apple-touch-icon" sizes="72x72" href="//twilio.com/bundles/marketing/img/favicons/favicon_72.png"><link rel="apple-touch-icon" sizes="114x114" href="//twilio.com/bundles/marketing/img/favicons/favicon_114.png"><link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"><link rel="stylesheet" href="viewsaurus.css"></head><body><div class="wrapper"><div id="viewsaurus" data-title="Instant Lead Alerts"><div class="saurus-panes"><div class="saurus-prose"><div class="saurus-prose-header"><div class="title-outer"><span class="step-title">Instant Lead Alerts</span></div></div><div class="saurus-nav-buttons"><div class="saurus-nav-button nav-overview"><div class="saurus-nav-button-inner"><i class="fa fa-fw fa-list"></i></div><div class="nav-divider"></div></div><div class="saurus-nav-button nav-previous"><div class="saurus-nav-button-inner"><a href=""> <i class="fa fa-fw fa-play fa-rotate-180"></i></a></div><div class="nav-divider"></div></div><div class="saurus-nav-button nav-next clickable"><div class="saurus-nav-button-inner"><a href="#1"> <i class="fa fa-fw fa-play"></i></a></div></div><div class="saurus-next-title"><span class="next-title-inner"></span></div></div><div class="saurus-progress-bar"></div><div class="saurus-start"><p>In this tutorial, we'll learn how to instantly route leads to real estate sales reps using text messages. Let's get started!</p><a href="#0">Start Tutorial</a></div><div class="saurus-content"><div data-title="Setting Up The Application" class="chapter"><div data-title="What Are We Building?" data-file="src/main/webapp/home.jsp" class="step"><h2 id="what-are-we-building-">What Are We Building?</h2>
 <p>You probably already have landing pages or product detail views in your
-web application, which you&#39;re using to generate leads for your business. 
+web application that you&#39;re using to generate leads for your business. 
 In this tutorial, we&#39;ll use Twilio SMS to send a message when a new lead
 is found.</p>
 <p><img src="//s3.amazonaws.com/howtodocs/lead-alerts-flow.png" alt="Lead Alerts Flow"></p>
@@ -31,9 +31,7 @@ we&#39;ve hard-coded the information we need.</p>
 <li><a href="//docs.oracle.com/javaee/6/tutorial/doc/bnafe.html">What is a Java Servlet?</a></li>
 </ul>
 </div><div data-title="Rendering the Landing Page" data-file="src/main/webapp/home.jsp" class="step"><h2 id="rendering-the-landing-page">Rendering the Landing Page</h2>
-<p>In our landing page, we insert data about the house, and in a sidebar
-include a form for the user to enter in their contact information to
-request more info about the home.</p>
+<p>In our landing page, we insert data about the house. We use a sidebar to include a form for the user to enter in their contact information. That way, they can request more info about the home.</p>
 <hr>
 <p><strong>See Also:</strong></p>
 <ul>
@@ -51,11 +49,11 @@ stored as environment variables.</p>
 </ul>
 </div><div data-title="Handling the POST Request" data-file="src/main/java/com/twilio/leadalerts/NotificationsServlet.java" data-highlight="25-42" class="step"><h2 id="handling-the-post-request">Handling the POST Request</h2>
 <p>This code handles the HTTP <code>POST</code> request issued by our landing page. It 
-uses our <code>MessageSender</code> class to send a SMS message to the real estate 
-agent&#39;s phone number, which is also set as a environment variable. We 
-include the lead&#39;s name, phone number, and inquiry directly in the body of 
+uses our <code>MessageSender</code> class to send an SMS message to the real estate 
+agent&#39;s phone number, which is also set as an environment variable. We 
+include the lead&#39;s name, phone number, and inquiry directly into the body of 
 the text message we send to the agent.</p>
-<p>Now the agent has all the information they need to immediately follow up on the lead.</p>
+<p>Now the agent has all the information they need to follow up on the lead immediately.</p>
 <hr>
 <p><strong>See Also:</strong></p>
 <ul>
