--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ we&#39;ve hard-coded the information we need.</p>
 <li><a href="//docs.oracle.com/javaee/6/tutorial/doc/bnafe.html">What is a Java Servlet?</a></li>
 </ul>
 </div><div data-title="Rendering the Landing Page" data-file="src/main/webapp/home.jsp" class="step"><h2 id="rendering-the-landing-page">Rendering the Landing Page</h2>
-<p>In our landing page, we insert data about the house. We use a sidebar to include a form for the user to enter in their contact information. That way, they can request more info about the home.</p>
+<p>In our landing page, we'll insert data about the house. We'll use a sidebar to include a form for the user to enter in their contact information. That way, they can request more info about the home.</p>
 <hr>
 <p><strong>See Also:</strong></p>
 <ul>
