--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
   height:100%;
   width:100%;
 }</style><link rel="shortcut icon" href="//twilio.com/bundles/marketing/img/favicons/favicon.ico"><link rel="apple-touch-icon" href="//twilio.com/bundles/marketing/img/favicons/favicon_57.png"><link rel="apple-touch-icon" sizes="72x72" href="//twilio.com/bundles/marketing/img/favicons/favicon_72.png"><link rel="apple-touch-icon" sizes="114x114" href="//twilio.com/bundles/marketing/img/favicons/favicon_114.png"><link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"><link rel="stylesheet" href="viewsaurus.css"></head><body><div class="wrapper"><div id="viewsaurus" data-title="Instant Lead Alerts"><div class="saurus-panes"><div class="saurus-prose"><div class="saurus-prose-header"><div class="title-outer"><span class="step-title">Instant Lead Alerts</span></div></div><div class="saurus-nav-buttons"><div class="saurus-nav-button nav-overview"><div class="saurus-nav-button-inner"><i class="fa fa-fw fa-list"></i></div><div class="nav-divider"></div></div><div class="saurus-nav-button nav-previous"><div class="saurus-nav-button-inner"><a href=""> <i class="fa fa-fw fa-play fa-rotate-180"></i></a></div><div class="nav-divider"></div></div><div class="saurus-nav-button nav-next clickable"><div class="saurus-nav-button-inner"><a href="#1"> <i class="fa fa-fw fa-play"></i></a></div></div><div class="saurus-next-title"><span class="next-title-inner"></span></div></div><div class="saurus-progress-bar"></div><div class="saurus-start"><p>In this tutorial, we'll learn how to instantly route leads to real estate sales reps using text messages. Let's get started!</p><a href="#0">Start Tutorial</a></div><div class="saurus-content"><div data-title="Setting Up The Application" class="chapter"><div data-title="What Are We Building?" data-file="src/main/webapp/home.jsp" class="step"><h2 id="what-are-we-building-">What Are We Building?</h2>
-<p>You probably already have landing pages or product detail views in your
-web application, which you&#39;re using to generate leads for your business.
+<p>You probably already have landing pages or product detail views -- that you&#39;re
+using to generate leads for your business-- on your web application.
 On this tutorial we&#39;ll use Twilio SMS to send a message when a new lead
 is found..</p>
 <p><img src="//s3.amazonaws.com/howtodocs/lead-alerts-flow.png" alt="Lead Alerts Flow"></p>
 <p>In this example we&#39;ll be implementing instant lead alerts for real estate
 (much like <a href="//www.twilio.com/customers/stories/trulia">our awesome friends at
 Trulia</a>). We&#39;ll create a
-landing page for a new house on the market, and notify a real estate agent
-the moment a potential customer requests information.</p>
+landing page for a new house on the market and a notification, that a potential
+customer requests information, for a real estate agent.</p>
 <p>Let&#39;s see how it works! Click the next arrow above to continue the tutorial.</p>
 </div><div data-title="Landing Page Data" data-file="src/main/java/com/twilio/leadalerts/HomeServlet.java" class="step"><h2 id="landing-page-data">Landing Page Data</h2>
 <p>To display a landing page for our house, we need some data about
-the fictional house we&#39;ve put on the market. For demonstration purposes,
+the fictional house we&#39;ve put on the market. For demonstration purposes
 we&#39;ve hard-coded the information we need.</p>
 <hr>
 <p><strong>See Also:</strong></p>
@@ -33,7 +33,7 @@ we&#39;ve hard-coded the information we need.</p>
 </div><div data-title="Rendering the Landing Page" data-file="src/main/webapp/home.jsp" class="step"><h2 id="rendering-the-landing-page">Rendering the Landing Page</h2>
 <p>In our landing page, we&#39;ll insert data about the house. We&#39;ll use a sidebar to include
 a form for the user to enter in their contact information.
-That way, they can request more info about the home.</p>
+That way they can request more info about the home.</p>
 <hr>
 <p><strong>See Also:</strong></p>
 <ul>
@@ -49,10 +49,11 @@ API</a> client that we can use anytime we need to send a text message. We initia
 </ul>
 </div><div data-title="Handling the POST Request" data-file="src/main/java/com/twilio/leadalerts/NotificationsServlet.java" data-highlight="25-42,14" class="step"><h2 id="handling-the-post-request">Handling the POST Request</h2>
 <p>This code handles the HTTP <code>POST</code> request issued by our landing page. It
-uses our <code>MessageSender</code> class to send a SMS message to the real estate
-agent&#39;s phone number, which is also set as a environment variable. We include the lead&#39;s name, phone number, and inquiry directly into the body of
+uses our <code>MessageSender</code> class to send an SMS message to the real estate
+agent&#39;s phone number, which is also set as a environment variable. We include
+the lead&#39;s name, phone number, and inquiry directly into the body of
 the text message we send to the agent.</p>
-<p>Now the agent has all the information they need to immediately follow up on the lead.</p>
+<p>Now the agent has all the information he/she needs to immediately follow up on the lead.</p>
 <hr>
 <p><strong>See Also:</strong></p>
 <ul>
@@ -60,7 +61,7 @@ the text message we send to the agent.</p>
 </ul>
 </div><div class="step"><h2 id="where-to-next-">Where to next?</h2>
 <p>That&#39;s it! We&#39;ve just implemented an application to instantly route leads to sales people using text messages. If you&#39;re a
-Java developer working with Twilio, you might want to check out these other tutorials.</p>
+Java developer working with Twilio, you might want to check these other tutorials out.</p>
 <p><a href="//www.twilio.com/docs/tutorials/walkthrough/click-to-call/java/servlets"><strong>Click-To-Call</strong></a></p>
 <p>Click-to-call enables your company to convert web traffic into phone calls
 with the click of a button.</p>
@@ -68,7 +69,7 @@ with the click of a button.</p>
 <p>Easily route callers to the right people and information with an IVR
 (interactive voice response) system.</p>
 <h3 id="did-this-help-">Did this help?</h3>
-<p>Thanks for checking out this tutorial! If you have any feedback
+<p>Thanks for checking this tutorial out! If you have any feedback
 to share with us, we&#39;d love to hear it.
 <a href="mailto:deved-oss@twilio.com">Contact the Twilio Developer Education Team</a> to let us know what you think.</p>
 </div></div>
